--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "eslint": "9.1.1",
-    "eslint-config-next": "14.2.3",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "framer-motion": "^9.1.7",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -29,6 +33,9 @@
   "devDependencies": {
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "autoprefixer": "^10.4.19",
     "eslint-config-prettier": "^8.10.0",
     "husky": "^9.0.11",
