--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy:vercel": "vercel"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -24,10 +26,15 @@
     "framer-motion": "^9.1.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.3",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "typescript": "5.4.5"
   },
   "devDependencies": {
@@ -36,6 +43,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint-config-prettier": "^8.10.0",
     "husky": "^9.0.11",
